--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "kriswallsmith/buzz": "0.9"
+        "kriswallsmith/buzz": "0.9",
+        "illuminate/support": "4.0.*"
     },
     "require-dev": {
         "mockery/mockery": "dev-master",
