--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "php": ">=5.3.0",
         "kriswallsmith/buzz": "0.9",
-        "illuminate/support": "4.0.*"
+        "illuminate/support": "4.0.*",
+        "illuminate/database": "4.0.*"
     },
     "require-dev": {
         "mockery/mockery": "dev-master",
@@ -30,5 +31,6 @@
         "psr-0": {
             "EllipseSynergie": "src/"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
